--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
 <div class="d-flex justify-content-around p-2 m-5 row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
 <!-- Card-1  -->
 <div class="col">
-<div class="Card m-2 p-2 h-100" style="width: 30rems;">
+<div class="Card m-2 p-2 h-100 my-style" style="width: 30rems;">
     <img src="Images/Card1.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">AVITA Essential 14 Celeron N4020 14" Full HD Laptop Matt Black Color</h5>
@@ -92,7 +92,7 @@
 </div>
 <!-- Card-2  -->
 <div class="col">
-<div class="card m-2 p-2 h-100" style="width: 30rems;">
+<div class="card m-2 p-2 h-100 my-style" style="width: 30rems;">
     <img src="Images/Card2.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Dell Inspiron 13 5310 Core i5 11th Gen 13.3" QHD Laptop</h5>
@@ -103,7 +103,7 @@
 </div>
   <!-- Card-3  -->
   <div class="col">
-  <div class="card m-2 p-2 h-100" style="width: 30rems;">
+  <div class="card m-2 p-2 h-100 my-style" style="width: 30rems;">
     <img src="Images/Card3.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Asus ZenBook 14 UX435EA Core i5 11th Gen 14" FHD Laptop</h5>
@@ -114,7 +114,7 @@
 </div>
   <!-- Card-4  -->
   <div class="col">
-  <div class="card m-2 p-2 h-100" style="width: 20rems;">
+  <div class="card m-2 p-2 h-100 my-style" style="width: 20rems;">
     <img src="Images/Card4.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">MSI Prestige 14 A11SCX Core i5 11th Gen 14" FHD Laptop</h5>
@@ -125,7 +125,7 @@
 </div>
   <!-- Card-5  -->
   <div class="col">
-  <div class="card m-2 p-2 h-100" style="width: 30rems;">
+  <div class="card m-2 p-2 h-100 my-style" style="width: 30rems;">
     <img src="Images/Card5.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">ASUS ZenBook Flip 13 UX363EA Core i7 11th Gen 13.3" FHD Laptop</h5>
@@ -136,7 +136,7 @@
 </div>
   <!-- Card-6  -->
   <div class="col">
-  <div class="card m-2 p-2 h-100" style="width: 30rems;">
+  <div class="card m-2 p-2 h-100 my-style" style="width: 30rems;">
     <img src="Images/Card6.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">HP Pavilion 13-bb0069TU Core i5 11th Gen 13.3" FHD Laptop</h5>
